[tool.poetry]
name = "got"
version = "0.0.1"
description = "Got: A a git based undo tree. Commit often? Got it."

license = "Apache-2.0"

authors = [
    "Nick Ouellet <nicholas.p.ouellet@gmail.com>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/CircArgs/got"
homepage = "https://github.com/CircArgs/got"

keywords = ['git', 'got', 'commit', 'source control']

[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here
cleo = "^0.8.1"
colorama = "^0.4.3"
watchdog = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.5.2"
dephell = "^0.8.3"

[tool.poetry.scripts]
got = 'got:run'

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}